--- a/.htaccess
+++ b/.htaccess
@@ -12,6 +12,6 @@ RewriteCond %{REQUEST_FILENAME}\.html -f
 
 # Here we actually show the page that has the .html extension
 
-RewriteRule ^(.*)$ $1.html [NC,L]
+RewriteRule ^(.*)$ $1.html [NC]
 
-
+RewriteRule Home index.html [NC,L]
